# automake-example

./: .gitignore  README.md  autogen.sh  configure.ac
basic/: configure.ac
basic/src/: main.c
docs/: autoconf-automake-process-simplified.dot.prem4  generate.sh
docs/logo/: license
docs/process/: autoconf-automake-process.dot.prem4
examples/basic/: Makefile.am
examples/multi-binary/: Makefile.am  configure.ac
examples/multi-binary/src/: xcalib.c
x11-example/: autogen.sh
